<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="app_name">ClassicJunk</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblLabel">Make &amp; Model</string>
    <string name="lblYearStart">Year Range From</string>
    <string name="lblYearEnd">Year Range To</string>
    <string name="lblZip">Zip Code</string>
    <string name="submit">Save</string>
    <string name="cancel">Cancel</string>
    <string name="deleteAlert">Delete Alert</string>

    <string name="resync_menu_title">Re-Sync</string>
    <string name="no_inventory_found">No notifications triggered yet.</string>
    <string name="no_watches_found">No alerts defined yet.</string>

    <string name="search_car">Keyword</string>
    <string name="search_years">Year</string>
    <string name="search_year_start">Year From</string>
    <string name="search_year_end">Year To</string>
    <string name="search_button_label">Search Cars</string>
    <string name="search_none_found">No results found.</string>

    <string name="section_title_1">New Alert</string>
    <string name="section_title_2">My Alerts</string>
    <string name="section_title_3">Notifications</string>
    <string name="section_title_4">Search</string>
    <string name="section_title_5">Search Results</string>
    <string name="title_activity_inventory_info">InventoryInfo</string>


</resources>

