<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/searchInventoryDialog">

    <EditText
        android:id="@+id/search_car"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/search_car" />

    <LinearLayout android:layout_height="wrap_content" android:id="@+id/tableRow1" android:orientation="horizontal"
        android:padding="5dp" android:layout_width="fill_parent">

        <EditText
            android:id="@+id/search_yearstart"
            android:inputType="number"
            android:maxLength="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/search_year_start"
            android:layout_weight="0.4"
            />
        <EditText
            android:id="@+id/search_yearend"
            android:inputType="number"
            android:maxLength="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/search_year_end"
            android:layout_weight="0.4"
            />
    </LinearLayout>


</LinearLayout>